--- a/src/components/SharedLayout/Header/Header.module.css
+++ b/src/components/SharedLayout/Header/Header.module.css
@@ -22,7 +22,7 @@
 
 .headerItem {
   color: #807f7f;
-   padding: 16px;
+   padding: 10px 20px;
   display: flex;
   align-items: flex-end;
   justify-content: flex-end;
