--- a/src/components/SharedLayout/Header/Footer/Footer.module.css
+++ b/src/components/SharedLayout/Header/Footer/Footer.module.css
@@ -26,8 +26,8 @@ height: auto;
 
 .contacts {
     content: "";
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     background-color: #ffffff;
     border-radius: 50%;
     margin-right: 5px;
@@ -47,10 +47,16 @@ height: auto;
 
 .icon {
     fill: #0736a4;
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
     animation: pulse 1.5s infinite;
    
+}
+.iconGitHub {
+    fill: #030303;
+    width: 25px;
+    height: 25px;
+    animation: pulse 1.5s infinite;
 }
 
 @keyframes pulse {
