--- a/src/index.css
+++ b/src/index.css
@@ -8,14 +8,10 @@
   flex-direction: column;
 }
 
-html, body {
+html, body, #root {
+  height: 100%;
   margin: 0;
   padding: 0;
-  min-height: 100%;
-   box-sizing: border-box;
-   scroll-behavior: smooth;
-  /* overflow-x: hidden;
-  overflow-y: auto; */
 }
 
 
@@ -23,11 +19,12 @@ body {
   font-family: 'Courier New', monospace;
   background: black;
   color: white;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   font-size: 14px;
   line-height: 1.5;
-  /* scrollbar-width: thin; */
+
+}
+.simplebar-scroll-content {
+  padding-right: 0 !important;
 }
 
 html,
