--- a/src/pages/About/About.module.css
+++ b/src/pages/About/About.module.css
@@ -18,7 +18,7 @@
   position: relative;
   min-height: 100vh;
   width: 100%;
-  scroll-snap-align: start;
+  /* scroll-snap-align: start; */
   display: flex;
   align-items: center;
   justify-content: center;
