--- a/src/components/Projects/ProjectsSection/ProjectsSection.module.css
+++ b/src/components/Projects/ProjectsSection/ProjectsSection.module.css
@@ -113,23 +113,38 @@
     padding: 20px;
     width: 280px;
 }
-.button {
+/* .button {
   font-family: 'Courier New', monospace;
     padding: 16px 32px !important;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
-    /* font-weight: 700 !important; */
-    font-size: 12px !important;
-  color: #ffffff !important;
-  cursor: pointer;
-border-radius: 20px !important;
-border: 1px solid rgba(240, 237, 237, 0.64) !important;
+    
  
+} */
+
+.button {
+    font-family: 'Courier New', monospace;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 600;
+    color: #ffffff !important;
+    cursor: pointer;
+    background-color: transparent !important;
+   border-bottom: 2px solid #ffffff !important;
+   
+   transition: color .3s ease-out;
 }
 
+
 .button:hover {
+  padding-left: 20px !important;
+  padding-right: 20px !important;
+  border-radius: 20px !important;
   background-color: #494949 !important;
     transition: all 0.3s ease;
   }
@@ -185,26 +200,6 @@ border: 1px solid rgba(240, 237, 237, 0.64) !important;
       }
 
 
-
- /* &::after {
-        content: "";
-        background: rgba(0, 0, 0, 0.5);
-        position: absolute;
-        left: 12px;
-        bottom: -6px;
-        width: calc(100% - 8px);
-        height: calc(100% - 8px);
-        z-index: -1;
-        transition: 0.35s cubic-bezier(0.25, 0.1, 0, 2.05);
-      }
-      &:hover:after {
-        left: 0;
-        bottom: -2px;
-        width: 100%;
-        height: 100%;
-      }
-    } */
-
  
 @keyframes left-edge {
 	0% {
@@ -228,7 +223,7 @@ border: 1px solid rgba(240, 237, 237, 0.64) !important;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(77, 24, 112, 0.5);
 }
 
 
