--- a/src/components/AboutContent/Intro/Intro.module.css
+++ b/src/components/AboutContent/Intro/Intro.module.css
@@ -5,13 +5,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 50px;
-    padding: 140px 50px;
-    margin: 100px 0px;
+    gap: 20px;
+    padding: 140px 0px;
+    /* margin: 100px 0px; */
 }
 .helloDiv {
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-direction: column;
     gap: 30px;
 }
@@ -45,18 +46,20 @@
             }
         }
 
-.text {
-    text-align: left;
-    font-size: 20px;
-    font-weight: 400;
-    color: #ffffff;
-     opacity: 0;
-    transform: translateY(100px);
-    animation: slideInFromRight 2s 1s forwards;
-    /* animation: slide-up 3s 1s forwards; */
-     background-color: rgba(0, 0, 0, 0.729);
-    padding: 10px 20px;
+.text { 
+  font-size: 20px;
+  letter-spacing: 0.5px;
+  line-height: 1.5;
+  font-weight: 600;
+  color: #ffffff;
+word-wrap: break-word;
+  opacity: 0;
+  transform: translateY(100px);
+  animation: slideInFromRight 2s 1s forwards;
+  background-color: rgba(0, 0, 0, 0.729);
+  padding: 10px 20px; 
   border-radius: 20px;
+  width: 750px;
     }
 
     @keyframes grow {
@@ -65,12 +68,12 @@
     opacity: 0; 
   }
   to {
-    width: 500px; 
+    width: 350px; 
     opacity: 1;
   }
 }
 .photo {
-  width: 500px;
+  width: 350px;
   height: auto;
     object-fit: cover;
     animation: grow 2s ease-in-out forwards;
