--- a/src/components/Projects/ShowMoreModal/ShowMoreModal.module.css
+++ b/src/components/Projects/ShowMoreModal/ShowMoreModal.module.css
@@ -1,11 +1,10 @@
 
 
 .mainWrapper {
-  padding: 40px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
+  justify-content: center;
+  align-items: center;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -19,10 +18,17 @@ background-color: rgb(23, 23, 23);
     inset 0 0 0 0.5px rgba(255, 255, 255, 0.06);
   /* backdrop-filter: blur(2px); */
   overflow-y: hidden;
-  max-width: 90vw;
+  max-width: 80vw;
   max-height: 80vh;
-  width: 1100px;
+  width: 800px;
   min-height: 400px;
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+  padding: 40px;
+  
 }
 
 .scrollArea {
@@ -30,6 +36,49 @@ background-color: rgb(23, 23, 23);
   overflow: hidden;
   width: 100%;
   height: 100%;
+}
+
+.scrollHint {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 25px;
+  height: 25px;
+  right: 18px;
+  bottom: 18px;
+  z-index: 1;
+  animation: bounce 1.5s infinite;
+  pointer-events: none;
+  opacity: 0.7;
+  transition: opacity 0.3s ease;
+}
+
+@keyframes bounce {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(5px);
+  }
+}
+@keyframes strokeColorCycle {
+  0%   { stroke: #ff0099; }
+  25%  { stroke: #ff6600; }
+  50%  { stroke: #ffff33; }
+  75%  { stroke: #33ff33; }
+  100% { stroke: #00baff; }
+}
+.svgIcon {
+stroke: #3498db;
+width: 18px;
+height: 18px;
+animation: strokeColorCycle 5s infinite ease-in-out;
+}
+
+.hide {
+  opacity: 0;
+  animation: none;
 }
 
 
