--- a/src/components/Projects/ShowMoreModal/ShowMoreModal.module.css
+++ b/src/components/Projects/ShowMoreModal/ShowMoreModal.module.css
@@ -28,6 +28,7 @@ background-color: rgb(23, 23, 23);
   width: 100%;
   height: 100%;
   padding: 40px;
+  position: relative;
   
 }
 
@@ -43,12 +44,15 @@ background-color: rgb(23, 23, 23);
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 25px;
-  height: 25px;
+  flex-direction: column;
+  gap: 4px;
+  width: 35px;
+  height: 35px;
   right: 18px;
-  bottom: 18px;
+  top: 40%;
+  transform: translate(-50%, -50%);
   z-index: 1;
-  animation: bounce 1.5s infinite;
+  animation: bounce 2.5s infinite;
   pointer-events: none;
   opacity: 0.7;
   transition: opacity 0.3s ease;
@@ -59,21 +63,14 @@ background-color: rgb(23, 23, 23);
     transform: translateY(0);
   }
   50% {
-    transform: translateY(5px);
+    transform: translateY(18px);
   }
 }
-@keyframes strokeColorCycle {
-  0%   { stroke: #ff0099; }
-  25%  { stroke: #ff6600; }
-  50%  { stroke: #ffff33; }
-  75%  { stroke: #33ff33; }
-  100% { stroke: #00baff; }
-}
 .svgIcon {
-stroke: #3498db;
+stroke: #f1ecec;
 width: 18px;
 height: 18px;
-animation: strokeColorCycle 5s infinite ease-in-out;
+filter: drop-shadow(0 1px 2px rgba(241, 239, 239, 0.644));
 }
 
 .hide {
@@ -113,37 +110,27 @@ animation: strokeColorCycle 5s infinite ease-in-out;
 }
 
 .links {
-   font-size: 18px;
-   font-weight: 600;
-   position: relative;
-      overflow: hidden;
-      text-decoration: none;
-   padding: 5px 10px;
-   color: #ffffffff;
-   transition:  0.35s cubic-bezier(0.25, 0.1, 0, 2.05);
-  }
-
-  .links::after {
-   content: "";
-   border-radius: 10px;
-   background: rgba(98, 88, 88, 0.5);
-   position: absolute;
-   left: 12px;
-   bottom: -6px;
-   width: calc(100% - 8px);
-        height: calc(100% - 8px);
-        z-index: -1;
-        
-   transition:  0.35s cubic-bezier(0.25, 0.1, 0, 2.05);
-}
-
-.links:hover:after {
-        left: 0;
-        bottom: -2px;
-        width: 100%;
-        height: 100%;
-      }
-
+   display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #ffffff;
+  cursor: pointer;
+  padding: 10px 20px;
+  border-radius: 20px;
+  background: #fff2;
+  box-shadow: 
+    0 0 0 1px #fff3, 
+    inset 120px 0 100px -100px #000c, 
+    0 0 0 0 #fff1;
+width: 200px;
+  white-space: nowrap; 
+  transition: box-shadow 0.4s ease-in-out;
+        &:hover {
+            box-shadow: 
+            0 0 0 1px #fff3, 
+            inset 200px 0px 100px -100px #000a, 
+            -4px 0 8px 2px #fff2;
+        }}
 
 .title,
 .subtitle,
@@ -180,7 +167,7 @@ animation: strokeColorCycle 5s infinite ease-in-out;
     font-weight: 600;
   color: #ffffff;
   cursor: pointer;
-    margin-right: 50px;
+    margin-right: 0px;
     margin-left: auto;
     border-radius: 20px;
  padding: 10px 20px;
